Fix dropdown overflow

--- a/scss/apnscp/_layout.scss
+++ b/scss/apnscp/_layout.scss
@@ -5,13 +5,12 @@ html {
     width: 100%;
     height: 100%;
     margin: 0;
-
+    overflow-x: hidden;
   }
 }
 
 #ui-full-flex-wrap {
   min-height: 100%;
-  overflow: hidden;
 }
 
 @include media-breakpoint-only(xl) {
